--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pi-by-heart"
-version = "1.0.1"
+version = "1.0.2"
 description = "A simple pi memorization game"  
-readme = "README.md"
+readme = "pypireadme.md"
 license = { file = "LICENSE" }
 authors = [{ name = "Meni Sadigurschi", email = "menisadi@gmail.com" }]
 keywords = ["game", "python", "pi", "mpmath", "pyfiglet"]  
