--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pi-by-heart"
-version = "1.0.2"
+version = "1.0.3"
 description = "A simple pi memorization game"  
 readme = "pypireadme.md"
 license = { file = "LICENSE" }
@@ -19,3 +19,6 @@ pyfiglet = "^1.3.0"
 
 [project.scripts]
 pi-by-heart = "pi:main"
+
+[project.urls]
+Homepage = "https://github.com/menisadi/pi-game"
