--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pi-by-heart"
-version = "1.0.3"
+version = "1.0.5"
 description = "A simple pi memorization game"  
 readme = "pypireadme.md"
 license = { file = "LICENSE" }
 authors = [{ name = "Meni Sadigurschi", email = "menisadi@gmail.com" }]
 keywords = ["game", "python", "pi", "mpmath", "pyfiglet"]  
 
-[dependencies]
-mpmath = "^1.0"  
-pyfiglet = "^1.3.0"  
+dependencies = [
+	"mpmath >= 1.0",
+	"pyfiglet >= 1.0",
+]
 
 [project.scripts]
 pi-by-heart = "pi:main"
